# volar

./: .gitignore  AGENTS.md  ARCHITECTURE.agents_.md  Cargo.toml  DOC.md  PROGRESS.md  README.md  goals.md  ir_dump_dyn.txt  package-lock.json  package.json  refactor_plan.md  tsconfig.json  volar.agents_.md  volar_ts_generated.ts
.cargo/: config.toml
crates/compiler/volar-build/: Cargo.toml
crates/compiler/volar-build/src/: circuit.rs  lib.rs  pipeline.rs  weave.rs
crates/compiler/volar-c-backend/: Cargo.toml
crates/compiler/volar-c-backend/src/: lib.rs
crates/compiler/volar-c-backend/tests/: basic.rs  curve_e2e.rs  e2e.rs  lir_backend.rs  lir_backend_components.rs  stack_alloc.rs  vole_e2e.rs
crates/compiler/volar-compiler/: Cargo.toml  volar_dyn_generated.rs  volar_ts_generated.ts
crates/compiler/volar-compiler-passes/: Cargo.toml
crates/compiler/volar-compiler-passes/examples/: parse_volar_spec.rs
crates/compiler/volar-compiler-passes/src/: chunk_fns.rs  const_analysis.rs  deshadow.rs  dump_ir.rs  lib.rs  lowering.rs  lowering_dyn.rs  printer_ts.rs  unpack_packed_bits.rs
crates/compiler/volar-compiler-passes/tests/: manifest.rs  parse_volar_spec.rs  traits_and_impls.rs  ts_backend.rs  ts_backend_components.rs
crates/compiler/volar-compiler/data/: volar_primitives_expanded.rs
crates/compiler/volar-compiler/docs/: IR_DOCUMENTATION.md
crates/compiler/volar-compiler/examples/: generate_volar_dyn.rs  generate_volar_ts.rs  parse_volar_spec.rs
crates/compiler/volar-compiler/src/: chunk_module.rs  const_analysis.rs  deshadow.rs  dump_ir.rs  ir.rs  lib.rs  linkage.rs  lowering_dyn.rs  manifest.rs  multi_module.rs  parser.rs  printer.rs  printer_ts.rs  reachability.rs
crates/compiler/volar-compiler/tests/: manifest.rs  multi_module.rs  parse_volar_spec.rs  remote_linking.rs  specialized_ir.rs  traits_and_impls.rs
crates/compiler/volar-lir-test-corpus/: Cargo.toml
crates/compiler/volar-lir-test-corpus/src/: generated.rs  lib.rs
crates/compiler/volar-weaver/: Cargo.toml
crates/compiler/volar-weaver/runtime/: helpers.rs
crates/compiler/volar-weaver/src/: faest.rs  fhe.rs  gadgets.rs  garble.rs  glue.rs  grafhen.rs  hybrid_net.rs  lib.rs  net.rs  noop.rs  oram.rs  storage_loop.rs  vole.rs  vole_common.rs
crates/fold/volar-fold/: Cargo.toml
crates/fold/volar-fold/src/: bridge_adapter.rs  ivc.rs  keccak.rs  keccak_r1cs.rs  lib.rs  link.rs  nifs.rs  pedersen.rs  r1cs.rs  scalar.rs  transport.rs  verify.rs
crates/fuzz/volar-fuzz/: Cargo.toml
crates/fuzz/volar-fuzz/proptest-regressions/properties/: biir_passes.txt  ir_passes.txt  opt.txt
crates/fuzz/volar-fuzz/src/: lib.rs
crates/fuzz/volar-fuzz/src/arbitrary/: biir.rs  ir.rs  mod.rs  vaffle.rs
crates/fuzz/volar-fuzz/src/generators/: biir.rs  ir.rs  mod.rs  oracle.rs  vaffle.rs
crates/fuzz/volar-fuzz/src/interpreter/: biir.rs  ir.rs  mod.rs  vaffle.rs
crates/fuzz/volar-fuzz/src/properties/: biir_passes.rs  ir_passes.rs  mod.rs  opt.rs  virt.rs
crates/ir/vaffle/: Cargo.toml
crates/ir/vaffle/src/: lib.rs  target.rs  waffle_lower.rs
crates/ir/volar-ir/: Cargo.toml
crates/ir/volar-ir-lir-target/: Cargo.toml
crates/ir/volar-ir-lir-target/src/: lib.rs  module_lower.rs
crates/ir/volar-ir-virt/: Cargo.toml
crates/ir/volar-ir-virt/src/: bir.rs  bytecode.rs  canon.rs  ctx.rs  hash.rs  ir.rs  lib.rs
crates/ir/volar-ir-virt/tests/: commitment.rs  dedup_invariant.rs  dyn_and_jumptable.rs  equiv_bir.rs  equiv_ir.rs  fhe_integration.rs
crates/ir/volar-ir/src/: boolar.rs  ir.rs  lib.rs  lower_lir.rs  lower_to_circuit.rs  movfuscate.rs  public.rs
crates/ir/volar-lir-text/: Cargo.toml
crates/ir/volar-lir-text/src/: calls.rs  lib.rs  tests.rs  types.rs
crates/ir/volar-lir-text/src/parse/: calls.rs  error.rs  lexer.rs  mod.rs  types.rs
crates/ir/volar-vaffle-target/: Cargo.toml
crates/ir/volar-vaffle-target/src/: import_config.rs  lib.rs  lower_to_ir.rs  target.rs  waffle_lower.rs
crates/oram/volar-oram/: Cargo.toml
crates/oram/volar-oram/src/: lib.rs
crates/spec/volar-spec/: Cargo.toml
crates/spec/volar-spec/proptest-regressions/: tfhe.txt
crates/spec/volar-spec/src/: byte_gen.rs  curve.rs  garble.rs  grafhen.rs  lib.rs  lwe.rs  mpc.rs  ot.rs  tfhe.rs  vole.rs
crates/spec/volar-spec/src/byte_gen/: impls.rs  prover.rs  verifier.rs
crates/spec/volar-spec/src/faest/: aes.rs  bavc.rs  convert_to_vole.rs  leaf_commit.rs  mod.rs  prg.rs  sign.rs  traits.rs  transcript.rs  universal_hash.rs
crates/spec/volar-spec/src/ot/: base.rs  group.rs  ideal_cot.rs  iknp.rs  lwe.rs  softspoken.rs
crates/spec/volar-spec/src/vole/: bitvole.rs  bridge.rs  field_rotate.rs  impls.rs  memory.rs  poly.rs  prove.rs  setup.rs  vope.rs
crates/spec/volar-spec/src/vole/field_rotate/: vope.rs
crates/spec/volar-spec/src/vole/vope/: ai_hazmat.rs
crates/volar-dyn/: Cargo.toml
crates/volar-dyn/src/: lib.rs  spec_dyn.rs
crates/volar-dyn/src/spec_dyn/: byte_gen.rs  vole.rs
crates/volar-dyn/src/spec_dyn/vole/: field_rotate.rs  impls.rs  poly.rs  vope.rs
crates/volar-dyn/src/spec_dyn/vole/field_rotate/: mod.rs  vope.rs
crates/volar-dyn/src/spec_dyn/vole/vope/: ai_hazmat.rs
crates/volar-spec-dyn/: Cargo.toml
crates/volar-spec-dyn/src/: core_types.rs  generated.rs  lib.rs
docs/: README.md  agents-guide.md  boundary-link-embedding.md  compiler.md  external-primitives-plan.md  fhe-weaver.md  fuzzing.md  garbling-pipeline.md  grafhen-appsec.md  grafhen-review-plan.md  grafhen.md  hash-to-curve-generators.md  insecure.md  integration-guide.md  ir-lowering.md  lir-abi.md  lir.md  memory-checking.md  oram-channel-plan.md  oram-fuzzing.md  overview.md  pipeline.md  primitives-compiler-plan.md  provenance.md  reliability.md  spec.md  (+7 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_biir_fold.rs  fuzz_biir_lower_to_circuit.rs  fuzz_biir_movfuscate.rs  fuzz_biir_store_forward.rs  fuzz_bir_virt.rs  fuzz_ir_fold.rs  fuzz_ir_store_forward.rs  fuzz_ir_virt.rs  fuzz_lower_ir_to_boolar.rs  fuzz_vaffle_fold.rs  fuzz_vaffle_store_forward.rs  fuzz_vaffle_to_ir.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+174 files in other folders)
