[workspace]
members = [
    "crates/spec/volar-spec",
    "crates/spec/volar-primitives",
    "crates/spec/volar-common",
    "crates/spec/volar-dyn",
    "crates/spec/volar-spec-dyn",
    "crates/ir/volar-ir",
    "crates/ir/vaffle",
    "crates/compiler/volar-compiler", "crates/compiler/ephemera", "crates/compiler/volar-compiler-common", "crates/ir/volar-ir-common",
]
resolver = "3"

[workspace.package]
license = "CC0-1.0 AND MIT AND Apache-2.0"
description = "VOLE-in-the-head computations for a cloud world"
repository = "https://github.com/portal-co/volar.git"
[workspace.dependencies]
volar-ir = {path="crates/ir/volar-ir", version = "0.1.0"}
vaffle = {path="crates/ir/vaffle", version = "0.1.0"}
volar-ir-common = {path="crates/ir/volar-ir-common", version = "0.1.0"}

digest = { version = "0.11.2", default-features = false }
cipher = { version = "0.5.1", default-features = false }
rand = { version = "0.9.2", default-features = false }
typenum = { version = "1.17", default-features = false }
hybrid-array = { version = "0.4.8", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
ff = { version = "0.13.1", default-features = false }
group = { version = "0.13.0", default-features = false }

portal-pc-waffle-ir = { version = "0.6.0-alpha.1", git = "https://github.com/portal-co/waffle-" }
