[workspace]
members = [
    "crates/spec/volar-spec",
    "crates/ir/volar-ir-config",
    "crates/spec/volar-primitives",
    "crates/spec/volar-common",
    "crates/spec/volar-dyn",
    "crates/spec/volar-spec-dyn",
    "crates/ir/volar-ir",
    "crates/ir/volar-ir-passes",
    "crates/ir/volar-ir-lir-target",
    "crates/ir/vaffle",
    "crates/ir/volar-vaffle-target",
    "crates/compiler/volar-compiler",
    "crates/compiler/volar-compiler-passes",
    "crates/compiler/ephemera",
    "crates/compiler/volar-compiler-common",
    "crates/ir/volar-ir-common",
    "crates/ir/volar-provenance",
    "crates/compiler/volar-weaver",
    "crates/ir/volar-lir",
    "crates/compiler/volar-lir-codegen",
    "crates/compiler/volar-c-backend",
    "crates/compiler/volar-llvm-backend",
    "crates/compiler/volar-lir-test-corpus",
    "crates/fuzz/volar-fuzz",
    "crates/ir/volar-ir-opt",
    "crates/channel/volar-channel",
    "crates/oram/volar-oram",
    "crates/oram/volar-oram-core",
    "crates/macros/volar-macros",
]
resolver = "3"

[workspace.package]
license = "CC0-1.0 AND MIT AND Apache-2.0"
description = "VOLE-in-the-head computations for a cloud world"
repository = "https://github.com/portal-co/volar.git"
[workspace.dependencies]
volar-ir-config = {path="crates/ir/volar-ir-config", version = "0.1.0"}
volar-ir = {path="crates/ir/volar-ir", version = "0.1.0"}
volar-ir-passes = {path="crates/ir/volar-ir-passes", version = "0.1.0"}
volar-lir = {path="crates/ir/volar-lir", version = "0.1.0"}
vaffle = {path="crates/ir/vaffle", version = "0.1.0"}
volar-vaffle-target = {path="crates/ir/volar-vaffle-target", version = "0.1.0"}
volar-ir-common = {path="crates/ir/volar-ir-common", version = "0.1.0"}
volar-provenance = {path="crates/ir/volar-provenance", version = "0.1.0"}
volar-ir-opt = {path="crates/ir/volar-ir-opt", version = "0.1.0"}
volar-channel = {path="crates/channel/volar-channel", version = "0.1.0"}
volar-oram = {path="crates/oram/volar-oram", version = "0.1.0"}
volar-oram-core = {path="crates/oram/volar-oram-core", version = "0.1.0"}
volar-macros = {path="crates/macros/volar-macros", version = "0.1.0"}
volar-compiler-passes = {path="crates/compiler/volar-compiler-passes", version = "0.1.0"}
volar-lir-test-corpus = {path="crates/compiler/volar-lir-test-corpus", version = "0.1.0"}

portal-pc-waffle-ir = { version = "0.6.0-alpha.1", git = "https://github.com/portal-co/waffle-" }

digest = { version = "0.11.2", default-features = false }
cipher = { version = "0.5.1", default-features = false }
rand = { version = "0.9.2", default-features = false }
typenum = { version = "1.17", default-features = false }
rkyv = { version = "0.8", default-features = false, features = ["alloc"] }
hybrid-array = { version = "0.4.8", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
ff = { version = "0.13.1", default-features = false }
group = { version = "0.13.0", default-features = false }

inkwell = { version = "0.8.0", features = [
    "llvm20-1",
] } # TODO: remove hardcoded LLVM version (currently llvm@20)