[package]
name = "volar-compiler"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
parsing = ["dep:syn", "dep:quote", "dep:proc-macro2", "std"]

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
volar-compiler = { path = ".", features = ["parsing"] }
