[package]
name = "volar-lir-test-corpus"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
volar-lir = { workspace = true }
volar-ir.workspace = true
volar-ir-common.workspace = true
volar-ir-passes.workspace = true
tempfile = "3"
