[package]
name = "volar-weaver"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
# Enable parsing-based spec linkage (makes weave output self-contained).
linking = ["volar-compiler/parsing"]
rkyv = ["volar-compiler/rkyv"]
# Enable the network-protocol weaving pass (volar_net::VoleTransport interface).
net = ["dep:volar-net"]

[dependencies]
volar-compiler = {path="../volar-compiler"}
volar-compiler-common ={path="../volar-compiler-common"}
volar-provenance.workspace = true
volar-ir.workspace = true
volar-ir-passes = {path="../../ir/volar-ir-passes"}
volar-lir = {path="../../ir/volar-lir"}
volar-lir-codegen = {path="../volar-lir-codegen"}
volar-c-backend = {path="../volar-c-backend"}
vaffle.workspace = true
portal-pc-waffle-ir.workspace = true
volar-net = { workspace = true, optional = true }