[package]
name = "volar-fold"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
hybrid-array.workspace = true
cipher.workspace = true
volar-spec = { path = "../../spec/volar-spec" }
volar-net = { path = "../../net/volar-net" }
