[package]
name = "volar-ir-lir-target"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
volar-ir.workspace = true
volar-ir-common.workspace = true
volar-lir.workspace = true
volar-lir-codegen  = { path = "../../compiler/volar-lir-codegen" }
volar-compiler     = { path = "../../compiler/volar-compiler" }

[dev-dependencies]
volar-lir-test-corpus = { workspace = true }
