[package]
name = "volar-ir"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
volar-provenance.workspace = true
volar-ir-common.workspace = true
volar-lir.workspace = true
rkyv = { workspace = true, optional = true }

[features]
rkyv = ["dep:rkyv", "volar-ir-common/rkyv"]