[package]
name = "volar-vaffle-target"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
vaffle.workspace = true
volar-ir.workspace = true
volar-ir-common.workspace = true
volar-lir.workspace = true
portal-pc-waffle-ir.workspace = true
