[package]
name = "volar-spec"
version = "0.1.0"
edition = "2024"
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
multi_party = []

[dependencies]
cipher.workspace = true
rand.workspace = true
digest.workspace = true
volar-primitives = { path = "../volar-primitives" }
volar-common = { path = "../volar-common" }